Rules/Tests/Reject/RejectWithCodeAndMessage.rft
Tests that a reject rule can accept both a code and a reject message

--RULE--
reject with 550 "You Are Rejected" 			# In Rule Comment
	when to noc@ && from 4.1.1.1/32			# In Rule Comment
		|| from 4.1.1.2 && from 4.1.1.3;	# After Rule Comment

--EXPECT--
Rule Input:
	reject with 550 "You Are Rejected"
		when to noc@ && from 4.1.1.1/32
			|| from 4.1.1.2 && from 4.1.1.3;

Rule Result:
	Reject ( WhereTo( Email('noc@') ) AND WhereFrom( IPMask('4.1.1.1/32') ) ) OR ( WhereFrom( IPMask('4.1.1.2') ) AND WhereFrom( IPMask('4.1.1.3') ) )

Rule Text From Result:
	reject with 550 "You Are Rejected" when ( to noc@ AND from 4.1.1.1/32 ) OR ( from 4.1.1.2/32 AND from 4.1.1.3/32 );

============================== 
